--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
         <span id="logo"></span>
 
         <a href="https://github.com/google/classp" class="button fork"><strong>View On GitHub</strong></a>
+        <div class="documentation">
+          <span>Downloads:</span>
+          <ul>
+            <li><a href="https://docs.google.com/document/d/1hqtbPkKbA5janVVb0xEXg4n1nGKs3tCgijK2PFRCx2k/edit?usp=sharing" class="button">Language</a></li>
+            <li><a href="https://docs.google.com/document/d/1Qq3R87a-_Aru8DXXVpxM35y5rWWwrJ1tpKoWs3y0o1U/edit?usp=sharing" class="button">User Manual</a></li>
+          </ul>
+        </div>
         <div class="downloads">
           <span>Downloads:</span>
           <ul>
@@ -62,6 +69,7 @@
 <li><p>A built in lexical analyzer.</p></li>
 </ol>
 
+The <a href="https://docs.google.com/document/d/1Qq3R87a-_Aru8DXXVpxM35y5rWWwrJ1tpKoWs3y0o1U/edit?usp=sharing">original blog post</a> on these ideas might give a better idea of where Classp is going.
 <h3>
 <a id="status" class="anchor" href="#status" aria-hidden="true"><span class="octicon octicon-link"></span></a>Status</h3>
 
